syntax = "proto3";

package blobcast.storageapis.v1;

option go_package = "github.com/forma-dev/blobcast/pkg/proto/blobcast/storageapis/v1";

import "google/api/field_behavior.proto";

message BatchGetFileManifestRequest {
  repeated string ids = 1 [(google.api.field_behavior) = REQUIRED];
}
